# Notely

./: LICENSE  pyproject.toml  tox.ini
src/: notely_lambda.py
src/notely/: __init__.py  note.py  notely.py
tests/: test_notely.py
